fixed fonts fixed firfox whitespace :

--- a/assets/stylesheets/app.scss
+++ b/assets/stylesheets/app.scss
@@ -658,6 +658,7 @@ $circle-width: 800px;
   width: 100%;
   height: 100%;
   position:fixed;
+  font-size: 1.2em;
 }
 /* Menu styles*/
 .contact-container{
@@ -741,7 +742,7 @@ $circle-width: 800px;
   background-size: 100% auto;
   background-repeat: no-repeat;
   font-family:OneDance;
-  top: 174px;
+  top: 173px;
   position: fixed;
   opacity: 0;
 }
